--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2108,7 +2108,7 @@
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
 		color: #f56a6a;
-		text-decoration: none;
+		text-decoration: none !important;
 	}
 
 		a:hover {
