dil secenegi eklendi

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -49,6 +49,6 @@
 	<script src="/js/util.js"></script>
 	<!--[if lte IE 8]><script src="/js/ie/respond.min.js"></script><![endif]-->
 	<script src="/js/main.js"></script>
- 
+<th:block layout:insert="~{layout/header :: script}"> </th:block>
 </body>
 </html>
