--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -19,8 +19,32 @@
 				<li><a href="#" class="icon fa-instagram"><span
 						class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon fa-medium"><span class="label">Medium</span></a></li>
+				<li>
+ 
+				<select id="locales" class="border-white">
+				    <option th:text="${#strings.toString(#locale)}=='en' ? 'EN' : 'TR' "></option>
+				    <option th:if="${#strings.toString(#locale)} !='tr'" value="tr" th:text="TR"></option>
+				    <option th:if="${#strings.toString(#locale)} !='en'" value="en" th:text="EN"></option>
+				</select>
+				</li>
 			</ul>
 		</header>
+ 	
+	</div>
+	
+	<!-- HEADER ICIN KULLANILACAK SCRİPTLER BURADA YER ALACAK  -->
+	
+	<div layout:fragment="script">
+		<script type="text/javascript">
+			$(document).ready(function() {
+			    $("#locales").change(function () {
+			        var selectedOption = $('#locales').val();
+			        if (selectedOption != ''){
+			            window.location.replace('?lang=' + selectedOption);
+			        }
+			    });
+			});
+	</script>
 	</div>
 
 </body>
