--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -22,12 +22,12 @@
 									</div>
 									<div>
 										<h3 class="text-center mt-2">DENİZCAN DEMİR</h3>
-										<p class="text-center">KİŞİSEL WEB SİTESİ</p>
+										<p class="text-center text-uppercase" th:text="#{general.label.siteTitle}"></p>
 									</div>
 				
 									<hr />
 									<form method="post" action="#" class="mt-3">
-										<input type="text" name="query" id="query" placeholder="Search" />
+										<input type="text" name="query" id="query" th:placeholder="#{general.label.search}" />
 									</form>
 				
 								</section>
@@ -38,11 +38,11 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a th:href="@{/}">Anasayfa</a></li>
-										<li><a th:href="@{/about}">Hakkımda</a></li>
-										<li><a th:href="@{/news}">Haberler</a></li>
+										<li><a th:href="@{/}" th:text="#{genaral.label.homePage}"></a></li>
+										<li><a th:href="@{/about}" th:text="#{general.label.aboutMe}"></a></li>
+										<li><a th:href="@{/news}" th:text="#{general.label.news}"></a></li>
 										<li>
-											<span class="opener">Dersler</span>
+											<span class="opener" th:text="#{general.label.lessons}"></span>
 											<ul>
 												<li><a href="#">Java</a></li>
 												<li><a href="#">JSF</a></li>
@@ -51,7 +51,7 @@
 												
 											</ul>
 										</li>
-										<li><a th:href="@{/contact}">İletişim</a></li>
+										<li><a th:href="@{/contact}" th:text="#{general.label.contact}"></a></li>
 					 
 									</ul>
 								</nav>
