--- a/src/main/resources/templates/pages/contact.html
+++ b/src/main/resources/templates/pages/contact.html
@@ -10,18 +10,18 @@
 <form method="post" action="#" class="mt-3">
 	<div class="row uniform">
 		<div class="col-md-7 col-xs-12">
-			<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+			<input type="text" name="demo-name" id="demo-name" value="" th:placeholder="#{general.label.name}" />
 		</div>
 		<div class="col-md-7 col-xs-12">
-			<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+			<input type="email" name="demo-email" id="demo-email" value="" th:placeholder="#{general.label.email}" />
 		</div>
 		<div class="col-md-12">
-			<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+			<textarea name="demo-message" id="demo-message" th:placeholder="#{general.label.enterYourMessage}" rows="6"></textarea>
 		</div>
 		<div class="col-md-12">
 			<ul class="actions">
-				<li><input type="submit" value="Send Message" class="special" /></li>
-				<li><input type="reset" value="Reset" /></li>
+				<li><input type="submit" th:value="#{general.label.sendMessage}" class="special" /></li>
+				<li><input type="reset" th:value="#{general.label.clear}" /></li>
 			</ul>
 		</div>
 	</div>
