--- a/src/main/resources/templates/blogPages/news.html
+++ b/src/main/resources/templates/blogPages/news.html
@@ -3,7 +3,7 @@
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layout/layout}">
+	layout:decorate="~{blogLayout/layout}">
 <th:block layout:fragment="title" th:text="#{general.label.news}"></th:block>
 <th:block layout:fragment="content">
 
