haber girisi icin editor eklendi ve haber ekleme ozelligi getirildi

--- a/src/main/resources/templates/adminLayout/sidebar.html
+++ b/src/main/resources/templates/adminLayout/sidebar.html
@@ -46,7 +46,7 @@
 										<li>
 											<span class="opener" th:text="News"></span>
 											<ul>
-												<li><a href="#">Create</a></li>
+												<li><a th:href="@{/admin/news/add}">Add</a></li>
 												<li><a href="#">Edit</a></li>
 											</ul>
 										</li>
