--- a/src/main/resources/templates/adminPages/usersEdit.html
+++ b/src/main/resources/templates/adminPages/usersEdit.html
@@ -7,6 +7,30 @@
 <th:block layout:fragment="title">Login</th:block>
 <th:block layout:fragment="content">
 
- <h1>BURASI EDİT USERSS</h1>
+ 
+ <div class="table-wrapper mt-3">
+	<table>
+		<thead>
+			<tr>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>Email</th>
+				<th>Action</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="user : ${users}">
+				<td th:text="${user.firstName}"></td>
+				<td th:text="${user.lastName}"></td>
+				<td th:text="${user.email}"></td>
+				<td>
+					<a href="" style="border:none" class="mr-1"><i class="fas fa-pencil-alt"></i></a>
+					<a href="" style="border:none" class="ml-1" onclick="return confirm('Are you sure !');"><i class="fas fa-trash"></i></a>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+ 
 </th:block>
 </html>
