user edit url'i list olarak degistirildi

--- a/src/main/resources/templates/adminLayout/sidebar.html
+++ b/src/main/resources/templates/adminLayout/sidebar.html
@@ -46,7 +46,7 @@
 											<span class="opener" th:text="Users"></span>
 											<ul>
 												<li><a th:href="@{/admin/users/add}">Add</a></li>
-												<li><a th:href="@{/admin/users/edit}">Edit</a></li>
+												<li><a th:href="@{/admin/users/list}">Lİst</a></li>
 											</ul>
 										</li>
 										<li>
