--- a/src/main/resources/templates/adminPages/usersList.html
+++ b/src/main/resources/templates/adminPages/usersList.html
@@ -24,7 +24,7 @@
 				<td th:text="${user.lastName}"></td>
 				<td th:text="${user.email}"></td>
 				<td>
-					<a href="" style="border:none" class="mr-1"><i class="fas fa-pencil-alt"></i></a>
+					<a th:href="@{'/admin/users/edit/'+ ${user.id}}" style="border:none" class="mr-1"><i class="fas fa-pencil-alt"></i></a>
 					<a href="" style="border:none" class="ml-1" onclick="return confirm('Are you sure !');"><i class="fas fa-trash"></i></a>
 				</td>
 			</tr>
