--- a/src/main/resources/templates/adminPages/usersEdit.html
+++ b/src/main/resources/templates/adminPages/usersEdit.html
@@ -26,7 +26,7 @@
 			</div>
 			<div class="form-group">
 				<select th:field="${user.enabled}" class="form-control col-md-6">
-					<option value="1" th:text="Aktif" selected="selected"></option>
+					<option value="1" th:text="Aktif"></option>
 					<option value="0" th:text="Pasif"></option>
 				</select>
 			</div>
