--- a/src/main/resources/templates/adminPages/usersList.html
+++ b/src/main/resources/templates/adminPages/usersList.html
@@ -15,6 +15,7 @@
 				<th>First Name</th>
 				<th>Last Name</th>
 				<th>Email</th>
+				<th>Status</th>
 				<th>Action</th>
 			</tr>
 		</thead>
@@ -23,6 +24,7 @@
 				<td th:text="${user.firstName}"></td>
 				<td th:text="${user.lastName}"></td>
 				<td th:text="${user.email}"></td>
+				<td th:text="${user.enabled}"></td>
 				<td>
 					<a th:href="@{'/admin/users/edit/'+ ${user.id}}" style="border:none" class="mr-1"><i class="fas fa-pencil-alt"></i></a>
 					<a th:href="@{'/admin/users/delete/'+ ${user.id}}" style="border:none" class="ml-1" onclick="return confirm('Are you sure !');"><i class="fas fa-trash"></i></a>
