--- a/src/main/resources/templates/adminLayout/sidebar.html
+++ b/src/main/resources/templates/adminLayout/sidebar.html
@@ -46,14 +46,14 @@
 											<span class="opener" th:text="Users"></span>
 											<ul>
 												<li><a th:href="@{/admin/users/add}">Add</a></li>
-												<li><a th:href="@{/admin/users/list}">Lİst</a></li>
+												<li><a th:href="@{/admin/users/list}">List</a></li>
 											</ul>
 										</li>
 										<li>
 											<span class="opener" th:text="News"></span>
 											<ul>
 												<li><a th:href="@{/admin/news/add}">Add</a></li>
-												<li><a href="#">Edit</a></li>
+												<li><a th:href="@{/admin/news/list}">List</a></li>
 											</ul>
 										</li>
 										<li>
