--- a/src/main/resources/templates/adminPages/newsAdd.html
+++ b/src/main/resources/templates/adminPages/newsAdd.html
@@ -13,14 +13,21 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.4/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.4/css/froala_style.min.css" rel="stylesheet" type="text/css" />
 
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 </head>
-<body>
+<body class="bg-light">
  
 	<div class="container">
+	
 	<form th:action="@{/admin/news/add}" method="post" th:object="${news}">
-		 <input type="text" th:field="${news.title}"> 
-		 <textarea th:field="${news.content}"></textarea>
-		 <input  type="submit" value="SEND" class="special"> 
+		 <input type="text" th:field="${news.title}" class="form-control mt-3 mb-3 " placeholder="News Title">
+		 <input type="text" th:field="${news.description}" class="form-control mt-3 mb-3 " placeholder="Description">
+		 
+			<textarea th:field="${news.content}"></textarea>
+		 <input  type="submit" value="Save" class="btn btn-danger  mt-3 mb-3">
+		 <input  type="reset" value="Clear" class="btn btn-warning  mt-3 mb-3 ">
+		 <a class="pull-right btn btn-success mt-3 mb-3"> Back</a> 
 	 </form>
 	</div>
 	
