--- a/src/main/resources/templates/adminPages/newsEdit.html
+++ b/src/main/resources/templates/adminPages/newsEdit.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{adminLayout/layout}">
-<th:block layout:fragment="title">News Edit</th:block>
-<th:block layout:fragment="content">
+	xmlns:th="http://www.thymeleaf.org">
+	<title>News Edit</title>
+<head>
+	
+	<!-- Include external CSS. -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.css">
+	
+	<!-- Include Editor style. -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.4/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.4/css/froala_style.min.css" rel="stylesheet" type="text/css" />
 
- <h1>BURASI EDİT</h1>
-</th:block>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+</head>
+<body class="bg-light">
+ 
+	<div class="container">
+	
+	<form th:action="@{'/admin/news/edit/'+ ${news.id}}" method="post" th:object="${news}">
+		 <input type="text" th:field="${news.title}" class="form-control mt-3 mb-3 " placeholder="News Title">
+		 <input type="text" th:field="${news.description}" class="form-control mt-3 mb-3 " placeholder="Description">
+		 
+		 <input type="hidden" th:field="${news.createDate}">
+		 <input type="hidden" th:field="${news.author}">
+		 <input type="hidden" th:field="${news.id}">
+		
+		<textarea th:field="${news.content}"></textarea>
+		
+		 <input  type="submit" value="Save" class="btn btn-danger  mt-3 mb-3">
+		 <input  type="reset" value="Clear" class="btn btn-warning  mt-3 mb-3 ">
+		 <a  th:href="@{/admin/news/list}" class="pull-right btn btn-success mt-3 mb-3"> Back</a> 
+	 </form>
+	</div>
+	
+	
+	
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/xml/xml.min.js"></script>
+ 
+    <!-- Include Editor JS files. -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.4/js/froala_editor.pkgd.min.js"></script>
+ 
+    <!-- Initialize the editor. -->
+    <script> $(function() { $('textarea').froalaEditor() }); </script>
+
+   
+</body>
 </html>
