--- a/src/main/resources/templates/blogPages/news.html
+++ b/src/main/resources/templates/blogPages/news.html
@@ -7,7 +7,19 @@
 <th:block layout:fragment="title" th:text="#{general.label.news}"></th:block>
 <th:block layout:fragment="content">
 
- 
+<!-- Section -->
+<section>
+	<div class="posts">
+		<article th:each="news : ${news}">
+			<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+			<h3 th:text="${news.title}"></h3>
+			<p th:text="${news.description}"></p>
+			<ul class="actions">
+				<li><a th:href="@{'/news/'+${news.id}}" class="button">More</a></li>
+			</ul>
+		</article>
+	</div>
+</section>
 
 </th:block>
 </html>
