contacts admin kısmı tamamlandı

--- a/src/main/resources/templates/adminLayout/sidebar.html
+++ b/src/main/resources/templates/adminLayout/sidebar.html
@@ -63,7 +63,7 @@
 												<li><a href="#">Edit</a></li>
 											</ul>
 										</li>
-										<li><a th:href="@{/contact}" th:text="Messages"></a></li>
+										<li><a th:href="@{/admin/contacts/list}" th:text="Messages"></a></li>
 					 
 									</ul>
 								</nav>
