--- a/src/main/resources/templates/blogPages/news.html
+++ b/src/main/resources/templates/blogPages/news.html
@@ -11,7 +11,7 @@
 <section>
 	<div class="posts">
 		<article th:each="news : ${news}">
-			<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+			<a href="#" class="image"> <img th:src="@{'data:image/jpg;base64,' + *{T(org.springframework.util.Base64Utils).encodeToString(news.image)}}"/></a>
 			<h3 th:text="${news.title}"></h3>
 			<p th:text="${news.description}"></p>
 			<ul class="actions">
