--- a/src/main/resources/templates/adminPages/newsEdit.html
+++ b/src/main/resources/templates/adminPages/newsEdit.html
@@ -20,16 +20,16 @@
  
 	<div class="container">
 	
-	<form th:action="@{'/admin/news/edit/'+ ${news.id}}" method="post" th:object="${news}">
+	<form th:action="@{'/admin/news/edit/'+ ${news.id}}" method="post" th:object="${news}" enctype="multipart/form-data">
 		 <input type="text" th:field="${news.title}" class="form-control mt-3 mb-3 " placeholder="News Title">
 		 <input type="text" th:field="${news.description}" class="form-control mt-3 mb-3 " placeholder="Description">
 		 
 		 <input type="hidden" th:field="${news.createDate}">
 		 <input type="hidden" th:field="${news.author}">
 		 <input type="hidden" th:field="${news.id}">
-		
-		<textarea th:field="${news.content}"></textarea>
-		
+		 <input type="hidden" th:field="${news.image}">
+		 <input type="file" name="images" class=" mb-2 btn btn-light"  accept="image/x-png,image/gif,image/jpeg"> 
+		 <textarea th:field="${news.content}"></textarea>
 		 <input  type="submit" value="Save" class="btn btn-danger  mt-3 mb-3">
 		 <input  type="reset" value="Clear" class="btn btn-warning  mt-3 mb-3 ">
 		 <a  th:href="@{/admin/news/list}" class="pull-right btn btn-success mt-3 mb-3"> Back</a> 
