--- a/src/main/resources/templates/adminLayout/sidebar.html
+++ b/src/main/resources/templates/adminLayout/sidebar.html
@@ -42,6 +42,7 @@
 									</header>
 									<ul>
 										<li><a th:href="@{/}" th:text="#{genaral.label.homePage}"></a></li>
+ 										<li><a th:href="@{/admin/about}" th:text="Hakkımda"></a></li>
  										<li>
 											<span class="opener" th:text="Users"></span>
 											<ul>
