--- a/src/main/resources/templates/adminLayout/sidebar.html
+++ b/src/main/resources/templates/adminLayout/sidebar.html
@@ -41,7 +41,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a th:href="@{/}" th:text="#{genaral.label.homePage}"></a></li>
+										<li><a th:href="@{/admin/home}" th:text="#{genaral.label.homePage}"></a></li>
  										<li><a th:href="@{/admin/about}" th:text="Hakkımda"></a></li>
  										<li>
 											<span class="opener" th:text="Users"></span>
