categories icin kod düzenlemesi

--- a/src/main/resources/templates/adminLayout/sidebar.html
+++ b/src/main/resources/templates/adminLayout/sidebar.html
@@ -58,11 +58,10 @@
 											</ul>
 										</li>
 										<li>
-											<span class="opener" th:text="Lessons"></span>
+											<span class="opener" th:text="Categories"></span>
 											<ul>
-												<li><a th:href="@{/admin/lessons/new}">New</a></li>
-												<li><a th:href="@{/admin/lessons/add}">Add</a></li>
-												<li><a th:href="@{/admin/lessons/edit}">Edit</a></li>
+ 												<li><a th:href="@{/admin/categories/add}">Add</a></li>
+												<li><a th:href="@{/admin/categories/edit}">Edit</a></li>
 											</ul>
 										</li>
 										<li><a th:href="@{/admin/contacts/list}" th:text="Messages"></a></li>
