--- a/src/main/resources/templates/adminPages/categoriesEdit.html
+++ b/src/main/resources/templates/adminPages/categoriesEdit.html
@@ -20,8 +20,8 @@
 		<tr th:each="category : ${categories}">
 			<td th:text="${category.categoryName}"></td>
 			<td>
-				<a th:href="@{'/admin/lessons/edit/'+ ${category.id}}" style="border:none" class="mr-1"><i class="fas fa-pencil-alt"></i></a>
-				<a th:href="@{'/admin/lessons/delete/'+ ${category.id}}" style="border:none" class="ml-1" onclick="return confirm('Are you sure !');"><i class="fas fa-trash"></i></a>
+				<a th:href="@{'/admin/categories/edit/'+ ${category.id}}" style="border:none" class="mr-1"><i class="fas fa-pencil-alt"></i></a>
+				<a th:href="@{'/admin/categories/delete/'+ ${category.id}}" style="border:none" class="ml-1" onclick="return confirm('Are you sure !');"><i class="fas fa-trash"></i></a>
 			</td>
 		</tr>
 	</tbody>
