lessons edit- delete tamamlandı

--- a/src/main/resources/templates/adminLayout/sidebar.html
+++ b/src/main/resources/templates/adminLayout/sidebar.html
@@ -58,6 +58,13 @@
 											</ul>
 										</li>
 										<li>
+											<span class="opener" th:text="Lessons"></span>
+											<ul>
+ 												<li><a th:href="@{/admin/lessons/add}">Add</a></li>
+												<li><a th:href="@{/admin/lessons/list}">List</a></li>
+											</ul>
+										</li>
+										<li>
 											<span class="opener" th:text="Categories"></span>
 											<ul>
  												<li><a th:href="@{/admin/categories/add}">Add</a></li>
