--- a/src/main/resources/templates/adminPages/lessonsEdit.html
+++ b/src/main/resources/templates/adminPages/lessonsEdit.html
@@ -28,7 +28,13 @@
 		 <input type="hidden" th:field="${lesson.author}">
 		 <input type="hidden" th:field="${lesson.id}">
 		 <input type="hidden" th:field="${lesson.image}">
-		 <input type="file" name="images" class=" mb-2 btn btn-light"  accept="image/x-png,image/gif,image/jpeg"> 
+		 
+		 <select class="form-control mt-3 mb-3" th:field="${lesson.category}" required="required">
+		 	<option value="">Kategori Seçiniz</option>
+		 	<option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.categoryName}"></option>
+		 </select>
+		 
+		 <input type="file" name="images" class="form-control mb-2 pb-5"  accept="image/x-png,image/gif,image/jpeg"> 
 		 <textarea th:field="${lesson.content}"></textarea>
 		 <input  type="submit" value="Save" class="btn btn-danger  mt-3 mb-3">
 		 <input  type="reset" value="Clear" class="btn btn-warning  mt-3 mb-3 ">
