--- a/src/main/resources/templates/blogLayout/sidebar.html
+++ b/src/main/resources/templates/blogLayout/sidebar.html
@@ -45,7 +45,7 @@
 											<span class="opener" th:text="#{general.label.lessons}"></span>
 											<ul>
 												<li th:each="category : ${categories}">
-													<a th:href="@{'lessons/'+${category.categoryUrl}}" th:text="${category.categoryName}"></a>
+													<a th:href="@{'/lessons/'+${category.categoryUrl}}" th:text="${category.categoryName}"></a>
 												</li>
 												 
 											</ul>
