--- a/src/main/resources/templates/adminPages/lessonsList.html
+++ b/src/main/resources/templates/adminPages/lessonsList.html
@@ -11,10 +11,10 @@
 	<table>
 		<thead>
 			<tr>
-				<th>Title</th>
-				<th>Author</th>
-				<th>Create Date</th>
- 				<th>Action</th>
+				<th th:text="#{general.label.title}"></th>
+				<th th:text="#{general.label.author}"></th>
+				<th th:text="#{general.label.createDate}"></th>
+ 				<th th:text="#{general.label.action}"></th>
 			</tr>
 		</thead>
 		<tbody>
