--- a/src/main/resources/templates/blogLayout/sidebar.html
+++ b/src/main/resources/templates/blogLayout/sidebar.html
@@ -38,7 +38,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a th:href="@{/}" th:text="#{genaral.label.homePage}"></a></li>
+										<li><a th:href="@{/}" th:text="#{general.label.homePage}"></a></li>
 										<li><a th:href="@{/about}" th:text="#{general.label.aboutMe}"></a></li>
 										<li><a th:href="@{/news}" th:text="#{general.label.news}"></a></li>
 										<li>
