--- a/src/main/resources/templates/adminPages/home.html
+++ b/src/main/resources/templates/adminPages/home.html
@@ -4,9 +4,9 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{adminLayout/layout}">
-<th:block layout:fragment="title">Login</th:block>
+<th:block layout:fragment="title" th:text="#{general.label.homePage}"></th:block>
 <th:block layout:fragment="content">
 
- <h1>BURASI HOME</h1>
+
 </th:block>
 </html>
