--- a/src/main/resources/templates/adminPages/login.html
+++ b/src/main/resources/templates/adminPages/login.html
@@ -9,10 +9,10 @@
 
 	<section>
 		<form id="login-form" class="form" action="login" method="post">
-			<input type="text" class="mt-3" id="username" name="username" th:placeholder="username" required="required" /> 
-			<input type="password" class="mt-3" id="password" name="password" th:placeholder="password" required="required" /> 
+			<input type="text" class="mt-3" id="username" name="username" th:placeholder="#{general.label.username}" required="required" /> 
+			<input type="password" class="mt-3" id="password" name="password" th:placeholder="#{general.label.password}" required="required" /> 
 			<input type="hidden" th:value="${_csrf.token}" th:name="${_csrf.parameterName}" /> 
-  			<input type="submit" name="submit" class="special mt-2" value="Login ">
+  			<input type="submit" name="submit" class="special mt-2" th:value="#{general.label.login}">
   			
 			<div th:if="${param.loginFailed}" class="alert alert-danger mt-3">Giriş Başarısız !</div>
 			<div th:if="${param.logout}" class="alert alert-success mt-3">Çıkış Başarılı !</div>
