--- a/src/main/resources/templates/adminPages/newsAdd.html
+++ b/src/main/resources/templates/adminPages/newsAdd.html
@@ -21,13 +21,13 @@
 	<div class="container">
 	
 	<form th:action="@{/admin/news/add}" method="post" th:object="${news}" enctype="multipart/form-data" >
-		 <input type="text" th:field="${news.title}" class="form-control mt-3 mb-3 " placeholder="News Title">
-		 <input type="text" th:field="${news.description}" class="form-control mt-3 mb-3 " placeholder="Description">
+		 <input type="text" th:field="${news.title}" class="form-control mt-3 mb-3 " th:placeholder="#{general.label.title}">
+		 <input type="text" th:field="${news.description}" class="form-control mt-3 mb-3 " th:placeholder="#{general.label.description}">
 		 <input type="file" name="images" class=" mb-2 btn btn-light" required="required" accept="image/x-png,image/gif,image/jpeg"> 
 		 <textarea th:field="${news.content}"></textarea>
-		 <input  type="submit" value="Save" class="btn btn-danger  mt-3 mb-3">
-		 <input  type="reset" value="Clear" class="btn btn-warning  mt-3 mb-3 ">
-		 <a  th:href="@{/admin/news/list}" class="pull-right btn btn-success mt-3 mb-3"> Back</a> 
+		 <input  type="submit" th:value="#{general.label.save}" class="btn btn-danger  mt-3 mb-3">
+		 <input  type="reset" th:value="#{general.label.clear}" class="btn btn-warning  mt-3 mb-3 ">
+		 <a  th:href="@{/admin/news/list}" class="pull-right btn btn-success mt-3 mb-3" th:text="#{general.label.back}"></a> 
 	 </form>
 	</div>
 	
