--- a/src/main/resources/templates/adminPages/usersEdit.html
+++ b/src/main/resources/templates/adminPages/usersEdit.html
@@ -9,32 +9,32 @@
 
 		<form id="login-form" class="mt-3" th:action="@{'/admin/users/edit/'+ ${user.id}}"	method="post" th:object="${user}">
 			<div class="form-group">
-				<input type="text" name="firstname" id="firstname" class="form-control col-md-6" th:field="${user.firstName}" required="required" placeholder="First Name">
+				<input type="text" name="firstname" id="firstname" class="form-control col-md-6" th:field="${user.firstName}" required="required" th:placeholder="#{general.label.firstName}">
 				<p class="error text-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></p>
 			</div>
 			<div class="form-group">
-				<input type="text" name="lastname" id="lastname" class="form-control col-md-6" th:field="${user.lastName}" required="required" placeholder="Last Name">
+				<input type="text" name="lastname" id="lastname" class="form-control col-md-6" th:field="${user.lastName}" required="required" th:placeholder="#{general.label.lastName}">
 				<p class="error text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></p>
 			</div>
 			<div class="form-group">
-				<input type="text" name="email" id="email" class="form-control col-md-6" th:field="${user.email}" required="required" placeholder="Email">
+				<input type="text" name="email" id="email" class="form-control col-md-6" th:field="${user.email}" required="required" th:placeholder="#{general.label.email}">
 				<p class="error text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
 			</div>
 			<div class="form-group">
-				<input type="text" name="username" id="username" class="form-control col-md-6" th:field="${user.username}"required="required" placeholder="Username">
+				<input type="text" name="username" id="username" class="form-control col-md-6" th:field="${user.username}"required="required" th:placeholder="#{general.label.username}">
 				<p class="error text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
 			</div>
 			<div class="form-group">
 				<select th:field="${user.enabled}" class="form-control col-md-6">
-					<option value="1" th:text="Aktif"></option>
-					<option value="0" th:text="Pasif"></option>
+					<option value="1" th:text="#{general.label.active}"></option>
+					<option value="0" th:text="#{general.label.passive}"></option>
 				</select>
 			</div>
  
 			<div class="form-group">
 				<input type="hidden" th:field="${user.password}" />
 				<input type="hidden" th:field="${user.id}" /> 
-				<input type="submit" name="submit" class="special col-md-6"	value="Register">
+				<input type="submit" name="submit" class="special col-md-6"	th:value="#{general.label.save}">
 			</div>
 
 		</form>
