--- a/src/main/resources/templates/adminPages/usersList.html
+++ b/src/main/resources/templates/adminPages/usersList.html
@@ -4,7 +4,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{adminLayout/layout}">
-<th:block layout:fragment="title">Login</th:block>
+<th:block layout:fragment="title" th:text="#{general.label.users}"></th:block>
 <th:block layout:fragment="content">
 
  
@@ -12,11 +12,11 @@
 	<table>
 		<thead>
 			<tr>
-				<th>First Name</th>
-				<th>Last Name</th>
-				<th>Email</th>
-				<th>Status</th>
-				<th>Action</th>
+				<th th:text="#{general.label.firstName}"></th>
+				<th th:text="#{general.label.lastName}"></th>
+				<th th:text="#{general.label.email}"></th>
+				<th th:text="#{general.label.status}"></th>
+				<th th:text="#{general.label.action}"></th>
 			</tr>
 		</thead>
 		<tbody>
