category düzenlemesi yapıldı

--- a/src/main/resources/templates/adminLayout/sidebar.html
+++ b/src/main/resources/templates/adminLayout/sidebar.html
@@ -68,7 +68,7 @@
 											<span class="opener" th:text="#{general.label.categories}"></span>
 											<ul>
  												<li><a th:href="@{/admin/categories/add}" th:text="#{general.label.add}"></a></li>
-												<li><a th:href="@{/admin/categories/edit}" th:text="#{general.label.edit}"></a></li>
+												<li><a th:href="@{/admin/categories/list}" th:text="#{general.label.list}"></a></li>
 											</ul>
 										</li>
 										<li><a th:href="@{/admin/contacts/list}" th:text="#{general.label.inbox}"></a></li>
