arama ozelligi eklendi

--- a/src/main/resources/templates/blogLayout/sidebar.html
+++ b/src/main/resources/templates/blogLayout/sidebar.html
@@ -26,8 +26,8 @@
 									</div>
 				
 									<hr />
-									<form method="post" action="#" class="mt-3">
-										<input type="text" name="query" id="query" th:placeholder="#{general.label.search}" />
+									<form method="post" th:action="@{/search}" class="mt-3">
+										<input type="text" name="search" id="search" th:placeholder="#{general.label.search}" />
 									</form>
 				
 								</section>
