header java sloganı ile degistirildi

--- a/src/main/resources/templates/adminLayout/header.html
+++ b/src/main/resources/templates/adminLayout/header.html
@@ -9,7 +9,7 @@
 
 	<div layout:fragment="header">
 		<header id="header">
-			<a href="index.html" class="logo"><strong>Editorial</strong> by	HTML5 UP</a>
+			<a href="#" class="logo"><strong>Write once, run anywhere</strong> by Sun Microsystems</a>
 			<ul class="icons">
 				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="#" class="icon fa-facebook"><span
