--- a/src/main/resources/templates/blogLayout/sidebar.html
+++ b/src/main/resources/templates/blogLayout/sidebar.html
@@ -27,7 +27,7 @@
 				
 									<hr />
 									<form method="post" th:action="@{/search}" class="mt-3">
-										<input type="text" name="search" id="search" th:placeholder="#{general.label.search}" />
+										<input type="text" name="search" id="search" th:placeholder="#{general.label.search}" required="required" />
 									</form>
 				
 								</section>
