--- a/src/main/resources/templates/blogPages/lessons.html
+++ b/src/main/resources/templates/blogPages/lessons.html
@@ -4,7 +4,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{blogLayout/layout}">
-<th:block layout:fragment="title" th:text="#{general.label.news}"></th:block>
+<th:block layout:fragment="title" th:text="#{general.label.lessons}"></th:block>
 <th:block layout:fragment="content">
 
 <!-- Section -->
